--- a/css/layout.css
+++ b/css/layout.css
@@ -6,9 +6,7 @@
    
    Name:
    Term: 
-
    This file contains the base styles used by all pages in the website
-
 */
 
 /* =============================================
@@ -19,7 +17,6 @@
 */
 
 html {
-	height: 100%;
 	font-size: 14px;
 }
 img, object, embed, video {
@@ -36,6 +33,12 @@ body {
 	min-height: 100%;
 	background-color: black;
 	color: white;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 nav {
 	width: 25%;
@@ -62,10 +65,15 @@ nav ul li a {
 	margin-bottom: 8%;
 }
 nav ul li a:visited {
-	color: #222;
+	color: white;
 }
+
+nav ul li a {
+	color: white;
+}
+
 nav ul li a:hover {
-	background-color: #b34a48;
+	background-color: rgb(0, 102, 0);
 	color: white;
 }
 nav ul li a:focus {
@@ -94,6 +102,11 @@ header img {
 .rightimg {
 	float: right;
 }
+
+.leftimg {
+	padding-left: 105px;
+}
+
 body p, body address {
 	margin: 3.5% 1%;
 	font-size: 1em;
@@ -145,7 +158,15 @@ article div h1 {
 	font-weight: bold;
 }
 
+table, th, td {
+	border: 1px solid white;
+}
+
 article p, article address {font-family: "Times New Roman", Times, serif;}
+
+
+
+
 /* =============================================
 	Tablet layout styles used by devices
 	481px to 768px and cascaded to larger 
@@ -296,7 +317,7 @@ body {
 	margin: 0px auto auto auto;
 	clear: none;
 	float: none;
-	background-color: white;
+	background-color: black;
 	-moz-box-shadow: rgba(31, 61, 31, 0.9) 20px 0px 25px,  rgba(31, 61, 31, 0.9) -20px 0px 25px;
 	-webkit-box-shadow: rgba(31, 61, 31, 0.9) 20px 0px 25px,  rgba(31, 61, 31, 0.9) -20px 0px 25px;
 	box-shadow: rgba(31, 61, 31, 0.9) 20px 0px 25px,  rgba(31, 61, 31, 0.9) -20px 0px 25px;
